Fix for footer bug on mobile websites

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -47,6 +47,7 @@ a:hover {
 
   section#footer{
     width: 49.5vh;
+    height: 62vh;
   }
 
   .logo-img {
